# ftp-upload

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  release.yml
src/: main.rs
test/www/: index.html
