[package]
name = "ftp-upload"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
suppaftp = { version = "4.5", features = ["rustls"] }
round = "0.1"
webpki-roots = "0.22"