[package]
name = "ftp-upload"
version = "0.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = [ "derive" ] }
suppaftp = { version = "5.3.1" }
round = "0.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
